[package]
name = "grim"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
tokio = { version = "1.15.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "rt",
    "time",
] }
skyangle = "0.1.2"
nalgebra = "0.31"
bincode = "1.3.3"
linya = "0.2.2"
env_logger = "0.9.0"
log = "0.4.16"
serde-pickle = "1.1.0"
parse-monitors = "0.1.0"
fem = { version = "0.2.9", package = "gmt-fem" }
crseo = "0.3.1"
lom = { version = "0.1.8", package = "gmt-lom" }
m1-ctrl = "0.1.2"
fsm = { version = "0.1.0", package = "m2-ctrl" }
dos-actors = { version = "0.1.11", features = ["main", "fem"] }
chrono = "0.4.19"

[features]
full = []
