[package]
name = "grim"
version = "0.1.0"
edition = "2021"
default-run = "main"

[workspace]
members = ["monte-carlo"]

[dependencies]
anyhow = "1.0.56"
tokio = { version = "1.15.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "rt",
    "time",
] }
skyangle = "0.1.2"
nalgebra = "0.31"
bincode = "1.3.3"
linya = "0.2.2"
env_logger = "0.9.0"
log = "0.4.16"
serde-pickle = "1.1.0"
parse-monitors = "0.1.0"
fem = { version = "0.3.0", package = "gmt-fem" }
lom = { version = "0.1.8", package = "gmt-lom" }
m1-ctrl = "0.1.2"
fsm = { version = "0.1.0", package = "m2-ctrl" }
chrono = "0.4.19"
crseo = "0.4.3"
dos-actors = { version = "0.1.20", features = ["main", "fem"] }
thiserror = "1.0.31"
flume = "0.10.13"
csv = "1.1.6"
serde = { version = "1.0.137", features = ["derive"] }

[features]
full = []
