[package]
name = "monte-carlo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
bincode = "1.3.3"
crseo = "0.4.3"
csv = "1.1.6"
dos-actors = { version = "0.1.20", features = ["main", "fem"] }
env_logger = "0.9.0"
fem = { version = "0.3.0", package = "gmt-fem" }
log = "0.4.17"
parse-monitors = "0.1.0"
serde = { version = "1.0.138", features = ["derive"] }
serde-pickle = "1.1.1"
skyangle = "0.1.2"
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
vec_box = "1.0.0"
